# PythonCPPExample

./: .gitignore  CMakeLists.txt  readme.md
usingCTypes/: Makefile  Makefile-linux.mk  sample.cpp  sample.hpp  test.py  testLinux.py
usingPyBind11/: .gitignore  Makefile  Makefile-linux.mk  Makefile.original  cmake_build.bat  example.cpp  example.hpp  pybinds.cpp  test.py  testLinux.py
usingSwig/: .gitignore  CMakeLists.txt  LinuxCMakeLists.txt  Makefile  Makefile-linux.mk  cmake_build.bat  example.cpp  example.hpp  example.i  hello.py  helloLinux.py
